# bevy_mod_debugdump

./: .gitignore  Cargo.toml  Makefile  README.md  Werkfile  out.d2
.cargo/: config.toml
.github/workflows/: ci.yml
debugdumpgen/: .gitignore  Cargo.toml  Makefile
debugdumpgen/src/: lib.rs
docs/: README.md  generate_readme.sh  index.04f9084d.js  index.04f9084d.js.map  index.099d0cbe.js  index.099d0cbe.js.map  index.21688554.js  index.21688554.js.map  index.2f113da7.css  index.2f113da7.css.map  index.580ffc15.js  index.580ffc15.js.map  index.5b8fbe2b.css  index.5b8fbe2b.css.map  index.6926265a.js  index.6926265a.js.map  index.8ef1748e.css  index.8ef1748e.css.map  index.99868497.js  index.99868497.js.map  index.9ad1404b.css  index.9ad1404b.css.map  index.a18de438.css  index.a18de438.css.map  index.ca13be57.js  index.ca13be57.js.map  index.d38c4601.css  index.d38c4601.css.map  index.e90c77f8.js  index.e90c77f8.js.map  index.ed18dfca.js  index.ed18dfca.js.map  index.fdea723e.js  index.fdea723e.js.map  index.ff2e8c66.css  index.ff2e8c66.css.map  index.html  index.runtime.1d728d56.js  index.runtime.1d728d56.js.map  index.runtime.bf189ca7.js  (+20 more)
docs/by-crate/: README.md  schedule_Main_bevy_animation.dot  schedule_Main_bevy_asset.dot  schedule_Main_bevy_audio.dot  schedule_Main_bevy_core.dot  schedule_Main_bevy_ecs.dot  schedule_Main_bevy_gilrs.dot  schedule_Main_bevy_hierarchy.dot  schedule_Main_bevy_input.dot  schedule_Main_bevy_pbr.dot  schedule_Main_bevy_render.dot  schedule_Main_bevy_scene.dot  schedule_Main_bevy_text.dot  schedule_Main_bevy_time.dot  schedule_Main_bevy_transform.dot  schedule_Main_bevy_ui.dot  schedule_Main_bevy_window.dot  schedule_Main_bevy_winit.dot
docs/by-crate/dark/: schedule_Main_bevy_animation.dot  schedule_Main_bevy_asset.dot  schedule_Main_bevy_audio.dot  schedule_Main_bevy_core.dot  schedule_Main_bevy_ecs.dot  schedule_Main_bevy_gilrs.dot  schedule_Main_bevy_hierarchy.dot  schedule_Main_bevy_input.dot  schedule_Main_bevy_pbr.dot  schedule_Main_bevy_render.dot  schedule_Main_bevy_scene.dot  schedule_Main_bevy_text.dot  schedule_Main_bevy_time.dot  schedule_Main_bevy_transform.dot  schedule_Main_bevy_ui.dot  schedule_Main_bevy_window.dot  schedule_Main_bevy_winit.dot
docs/by-crate/light/: schedule_Main_bevy_animation.dot  schedule_Main_bevy_asset.dot  schedule_Main_bevy_audio.dot  schedule_Main_bevy_core.dot  schedule_Main_bevy_ecs.dot  schedule_Main_bevy_gilrs.dot  schedule_Main_bevy_hierarchy.dot  schedule_Main_bevy_input.dot  schedule_Main_bevy_pbr.dot  schedule_Main_bevy_render.dot  schedule_Main_bevy_scene.dot  schedule_Main_bevy_text.dot  schedule_Main_bevy_time.dot  schedule_Main_bevy_transform.dot  schedule_Main_bevy_ui.dot  schedule_Main_bevy_window.dot  schedule_Main_bevy_winit.dot
docs/dark/: render_schedule_ExtractSchedule.dot  render_schedule_Main.dot  render_schedule_Outer.dot  schedule_FixedUpdate.dot  schedule_Main.dot  schedule_Main_Filtered.dot  schedule_Outer.dot  schedule_Startup.dot
docs/light/: render_schedule_ExtractSchedule.dot  render_schedule_Main.dot  render_schedule_Outer.dot  schedule_FixedUpdate.dot  schedule_Main.dot  schedule_Main_Filtered.dot  schedule_Outer.dot  schedule_Startup.dot
docs/render/: README.md
docs/render/dark/: render_graph.dot
docs/render/light/: render_graph.dot
docs/schedule/: README.md
docs/schedule/by-crate/: README.md
docs/schedule/by-crate/dark/: schedule_Main_bevy_animation.dot  schedule_Main_bevy_asset.dot  schedule_Main_bevy_audio.dot  schedule_Main_bevy_core.dot  schedule_Main_bevy_ecs.dot  schedule_Main_bevy_gilrs.dot  (+11 more)
docs/schedule/dark/: render_schedule_Core2d.dot  render_schedule_Core3d.dot  render_schedule_ExtractSchedule.dot  render_schedule_Main.dot  render_schedule_Outer.dot  render_schedule_Render.dot  render_schedule_RenderGraph.dot  render_schedule_RenderRecovery.dot  render_schedule_RenderStartup.dot  schedule_AssetEvents.dot  schedule_First.dot  schedule_FixedFirst.dot  schedule_FixedLast.dot  schedule_FixedMain.dot  schedule_FixedPostUpdate.dot  schedule_FixedUpdate.dot  schedule_Last.dot  schedule_LoadAssets.dot  schedule_Main.dot  schedule_Main_Filtered.dot  schedule_Outer.dot  schedule_PostStartup.dot  schedule_PostUpdate.dot  schedule_PreStartup.dot  schedule_PreUpdate.dot  schedule_RunFixedMainLoop.dot  schedule_RunFixedUpdateLoop.dot  schedule_SpawnScene.dot  schedule_Startup.dot  schedule_StateTransition.dot  schedule_Update.dot  schedule_UpdateAssets.dot
docs/schedule/light/: render_schedule_Core2d.dot  render_schedule_Core3d.dot  render_schedule_ExtractSchedule.dot  render_schedule_Main.dot  render_schedule_Outer.dot  render_schedule_Render.dot  render_schedule_RenderGraph.dot  render_schedule_RenderRecovery.dot  render_schedule_RenderStartup.dot  schedule_AssetEvents.dot  schedule_First.dot  schedule_FixedFirst.dot  schedule_FixedLast.dot  schedule_FixedMain.dot  schedule_FixedPostUpdate.dot  schedule_FixedUpdate.dot  schedule_Last.dot  schedule_LoadAssets.dot  schedule_Main.dot  schedule_Main_Filtered.dot  schedule_Outer.dot  schedule_PostStartup.dot  schedule_PostUpdate.dot  schedule_PreStartup.dot  schedule_PreUpdate.dot  schedule_RunFixedMainLoop.dot  schedule_RunFixedUpdateLoop.dot  schedule_SpawnScene.dot  schedule_Startup.dot  schedule_StateTransition.dot  schedule_Update.dot  schedule_UpdateAssets.dot
examples/: cli.rs  compare.rs  generate_docs.rs  print_events_graph.rs  print_render_graph.rs  print_render_schedule_graph.rs  print_schedule_graph.rs  print_schedule_graph_advanced_filters.rs  print_schedule_graph_filtered.rs  schedule_graph_child_set.rs  schedule_graph_compare.rs  schedule_graph_testing.rs  testing.rs  testing_print_info.rs  testing_schedule.rs
src/: cli.rs  d2.rs  dot.rs  lib.rs  render_graph.rs  schedule_graph.rs  settings.rs  utils.rs
src/event_graph/: mod.rs  settings.rs  system_style.rs
src/render_graph/: mod.rs  settings.rs
src/schedule_graph/: d2.rs  mod.rs  settings.rs  system_style.rs
web/: .gitignore  package.json  tailwind.config.mjs  tsconfig.json
web/src/: index.html  index.ts  style.css
(+17 files in other folders)
