[package]
name = "bevy_mod_debugdump"
version = "0.14.0"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Visualization tools for bevy"
keywords = ["bevy", "schedule", "visual", "render", "graph"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["cli", "render_graph"]
cli = ["dep:lexopt"]
render_graph = ["dep:bevy_render"]

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_color = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_log = { git = "https://github.com/bevyengine/bevy" }
bevy_platform = { git = "https://github.com/bevyengine/bevy" }
bevy_render = { git = "https://github.com/bevyengine/bevy", optional = true }
bevy_utils = { git = "https://github.com/bevyengine/bevy" }
disqualified = "1.0"
lexopt = { version = "0.3.0", optional = true }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }

[[example]]
name = "generate_docs"
required-features = ["render_graph"]

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]

[patch."https://github.com/bevyengine/bevy"]
bevy = { path = "../bevy" }
bevy_app = { path =  "../bevy/crates/bevy_app" }
bevy_color = { path =  "../bevy/crates/bevy_color" }
bevy_ecs = { path =  "../bevy/crates/bevy_ecs" }
bevy_log = { path =  "../bevy/crates/bevy_log" }
bevy_platform = { path =  "../bevy/crates/bevy_platform" }
bevy_render = { path =  "../bevy/crates/bevy_render" }
bevy_utils = { path =  "../bevy/crates/bevy_utils" }
