[package]
name = "bevy_mod_debugdump"
version = "0.15.0"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Visualization tools for bevy"
keywords = ["bevy", "schedule", "visual", "render", "graph"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["cli"]
cli = ["dep:lexopt"]

[dependencies]
bevy_app = { version = "0.19.0" }
bevy_color = { version = "0.19.0" }
bevy_ecs = { version = "0.19.0" }
bevy_log = { version = "0.19.0" }
bevy_platform = { version = "0.19.0" }
bevy_utils = { version = "0.19.0", features = ["debug"] }
disqualified = "1.0"
lexopt = { version = "0.3.0", optional = true }

[dev-dependencies]
bevy = { version = "0.19.0" }
bevy_render = { version = "0.19.0" }

[patch.crates-io]
# bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
# bevy_app = { path = "../bevy/crates/bevy_app" }
# bevy_color = { path = "../bevy/crates/bevy_color" }
# bevy_log = { path = "../bevy/crates/bevy_log" }
# bevy_platform = { path = "../bevy/crates/bevy_platform" }
# bevy_render = { path = "../bevy/crates/bevy_render" }
# bevy_utils = { path = "../bevy/crates/bevy_utils" }
# bevy = { path = "../bevy" }

# bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
# bevy_app = { git = "https://github.com/bevyengine/bevy" }
# bevy_color = { git = "https://github.com/bevyengine/bevy" }
# bevy_log = { git = "https://github.com/bevyengine/bevy" }
# bevy_platform = { git = "https://github.com/bevyengine/bevy" }
# bevy_render = { git = "https://github.com/bevyengine/bevy" }
# bevy_utils = { git = "https://github.com/bevyengine/bevy" }
# bevy = { git = "https://github.com/bevyengine/bevy" }
